--- a/portfolio.css
+++ b/portfolio.css
@@ -140,11 +140,14 @@ main h1 b{
 }
 .item > a img{
     width: 100%;
-    aspect-ratio: attr(width) / attr(height);
+    height: 256px;
+    object-fit: cover; /*fill none cover contain scale down*/
+    object-position: top; /*top left right center*/
+    /*aspect-ratio: attr(width) / attr(height);
     background-attachment: fixed;
     background-size: cover;
     background-origin: content-box;
-    background-position: center;
+    background-position: center;*/
 }
 .item .description{
     padding: 16px;
@@ -171,7 +174,7 @@ main h1 b{
     border-radius: 4px;
     border: none;
     outline: none;
-    margin: 32px;
+    margin: 16px 32px;
     min-width: 200px;
     font-size: 1.2em;
     font-weight: 700;
@@ -192,7 +195,7 @@ main h1 b{
 .contact-form{
     margin: 0 auto;
     width: 95%;
-    padding: 16px;    
+    padding: 16px 32px;    
     font-family: "Raleway", sans-serif;
     border-radius: 32px;
     box-shadow: 0px 1px 4px 3px #ddd;
@@ -205,12 +208,14 @@ main h1 b{
 }
 .contact-form input{
     font-size: 18px;
-    background: none;
+    background: #fff;
     color: #333;
     width: 100%;
     height: 48px;
-    border: none;
-    padding: 0 5px;
+    border-radius: 16px;
+    border: 2px solid #ccc;
+    margin: 8px auto;
+    padding: 0 16px;
     outline: none;
 }
 .contact-form input::after{
@@ -227,6 +232,9 @@ main h1 b{
     border: 2px solid #ddd;
     border-radius: 16px;
     box-shadow: -1px 4px 8px #ccc;
+}
+#contact{
+    height: auto;
 }
 .container{
     margin: 32px 16px;
@@ -326,8 +334,10 @@ main h1 b{
     top:0;
     left:0;
     visibility: hidden;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    margin: 0 auto;
+    z-index: 10;
     display: grid;
     justify-items: center;
     align-items: center;
@@ -342,20 +352,23 @@ main h1 b{
     margin: 0 auto;
     height: 70vh;
     box-shadow: 0px 2px 20px #aaa;
-    visibility: hidden;
+    /*visibility: hidden;*/
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
-    z-index: 1000;
+    z-index: 20;
     min-width: 320px;
+    position: relative;
 }
-.md-show {
-    visibility: visible;
-    transition: 0.5s;
-}
-.item:hover .md-content{
+.md.md-show {
     visibility: visible;
     animation: animation 1s;
+    pointer-events: none;
+    z-index: 10;
 }
+/*.item:hover .md-content{
+    visibility: visible;
+    animation: animation 1s;
+}*/
 .md-img{
     overflow:hidden;
     width: 100%;
@@ -365,18 +378,19 @@ main h1 b{
 .md-details{
     background: #f2fdff;
     width: 100%;
+    color: #000;
     height: 100%;
     padding: 32px;
     grid-column: 2/3;
     position: relative;
 }
-.md button{
-    content: '';
+.md-close{
+    z-index: 30;
     width: 32px;
     height: 32px;
     position: absolute;
     top: -16px;
-    left: 95%;
+    right: -16px;
     background: #000;
     color: #fff;
     border-radius: 50%;
@@ -395,9 +409,25 @@ main h1 b{
 }
 .md-img img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
     aspect-ratio: attr(width) / attr(height);
 }
-
+#overlay{
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color: rgba(0,0,0,0.5);
+    pointer-events: none;
+    opacity:0;
+}
+#overlay.md-show{
+    opacity: 1;
+    pointer-events: all;
+}
 @keyframes animation{
     0%{
         transform: scale(0) rotateY(180deg);
@@ -474,6 +504,11 @@ main h1 b{
         justify-items: center;
     }
     .featured-img{
+        position: relative;
+        margin: 0 auto;
+        width: 50vw;
+    }
+    .btn{
         position: relative;
         margin: 0 auto;
     }
