--- a/portfolio.css
+++ b/portfolio.css
@@ -124,12 +124,12 @@ main h1 b{
     padding: 32px 48px;
     grid-gap: 48px;
     margin: 0 auto;
+    height: auto;
 }
 .item{
     width: 100%;
     height: 100%;
-    /*min-width: 200px;*/
-    min-height: 50%;
+    min-height: 200px;
     display: grid;
     grid-template-rows: 80% 20%;
     border: 1px solid #333;
@@ -138,7 +138,7 @@ main h1 b{
     cursor: pointer;
     box-shadow: 2px 2px 8px #aaa;
 }
-.item > a img{
+.item > img{
     width: 100%;
     height: 256px;
     object-fit: cover; /*fill none cover contain scale down*/
@@ -331,11 +331,12 @@ main h1 b{
 /*----------- FIN DEL MENÚ LATERAL ------------*/
 .md{
     position: fixed;
-    top:0;
-    left:0;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
     visibility: hidden;
-    width: 100vw;
-    height: 100vh;
+    width: 70vw;
+    height: 70vh;
     margin: 0 auto;
     z-index: 10;
     display: grid;
@@ -343,27 +344,22 @@ main h1 b{
     align-items: center;
 }
 .md-content{
+    position: relative;
     display: grid;
     grid-template-columns: minmax(256px, 1fr) 320px;
     background:rgb(65, 130, 250);
-    backface-visibility: hidden;
     z-index: 1000;
-    width: 70vw;
+    width: 100%;
     margin: 0 auto;
-    height: 70vh;
+    height: 100%;
     box-shadow: 0px 2px 20px #aaa;
-    /*visibility: hidden;*/
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
-    z-index: 20;
     min-width: 320px;
-    position: relative;
 }
 .md.md-show {
     visibility: visible;
     animation: animation 1s;
-    pointer-events: none;
-    z-index: 10;
 }
 /*.item:hover .md-content{
     visibility: visible;
@@ -389,12 +385,12 @@ main h1 b{
     width: 32px;
     height: 32px;
     position: absolute;
-    top: -16px;
-    right: -16px;
-    background: #000;
-    color: #fff;
-    border-radius: 50%;
-    border: 3px solid white;
+    top: 8px;
+    right: 8px;
+    background:none;
+    font-size: 1.5em;
+    border: none;
+    color: #555;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -427,14 +423,15 @@ main h1 b{
 #overlay.md-show{
     opacity: 1;
     pointer-events: all;
+    filter: blur(1px);
 }
 @keyframes animation{
     0%{
-        transform: scale(0) rotateY(180deg);
+        transform: scale(0) rotateY(180deg) translate(-50%,-50%);;
         opacity: 0;
     }
     100%{
-        transform: scale(1) rotate(0deg);
+        transform: scale(1) rotate(0deg) translate(-50%,-50%);;
         opacity: 1;
     }
 }
@@ -647,6 +644,12 @@ main h1 b{
 body.dark-theme {
     color: #fff;
     background: #323232;
+}
+.moon.dark-theme{
+    background: white;
+}
+.moon::after.dark-theme{
+    background: #333;
 }
 @media (prefers-color-scheme: dark) {
     /* defaults to dark theme */
